--- a/package.json
+++ b/package.json
@@ -10,12 +10,22 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "axios": "^0.19",
+        "axios": "^0.19.2",
+        "case-sensitive-paths-webpack-plugin": "^2.3.0",
         "cross-env": "^7.0",
-        "laravel-mix": "^5.0.1",
-        "lodash": "^4.17.13",
+        "deepmerge": "^4.2.2",
+        "laravel-mix": "^5.0.7",
+        "lodash": "^4.17.20",
         "resolve-url-loader": "^3.1.0",
-        "sass": "^1.15.2",
-        "sass-loader": "^8.0.0"
+        "sass": "^1.27.0",
+        "sass-loader": "^8.0.2",
+        "vue-template-compiler": "^2.6.12"
+    },
+    "dependencies": {
+        "vue": "^2.6.12",
+        "vue-router": "^3.4.6",
+        "vuetify": "^2.3.14",
+        "vuetify-loader": "^1.5.0",
+        "vuex": "^3.5.1"
     }
 }
