--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,8 @@
 {
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
-    "/EventsPage.js": "/EventsPage.js"
+    "/EventDetailPage.js": "/EventDetailPage.js",
+    "/EventFormPage.js": "/EventFormPage.js",
+    "/EventsPage.js": "/EventsPage.js",
+    "/ProfilePage.js": "/ProfilePage.js"
 }
