--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dependencies": {
         "vue": "^2.6.12",
         "vue-router": "^3.4.6",
+        "vuelidate": "^0.7.5",
         "vuetify": "^2.3.14",
         "vuetify-loader": "^1.5.0",
         "vuex": "^3.5.1"
