--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "vue-router": "^3.4.6",
         "vuelidate": "^0.7.5",
         "vuetify": "^2.3.14",
+        "vuetify-google-autocomplete": "^2.0.3",
         "vuetify-loader": "^1.5.0",
         "vuex": "^3.5.1"
     }
