--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "vuetify": "^2.3.14",
         "vuetify-google-autocomplete": "^2.0.3",
         "vuetify-loader": "^1.5.0",
-        "vuex": "^3.5.1"
+        "vuex": "^3.5.1",
+        "vuex-persistedstate": "^4.0.0-beta.1"
     }
 }
