--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
+        "lodash.isempty": "^4.4.0",
         "vue": "^2.6.12",
         "vue-router": "^3.4.6",
         "vuelidate": "^0.7.5",
