--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
+        "date-fns": "^2.16.1",
         "lodash.isempty": "^4.4.0",
         "vue": "^2.6.12",
         "vue-router": "^3.4.6",
